--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        testBuildType System.getProperty('testBuildType', 'debug') //detox config
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner' //detox config
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
         if (isNewArchitectureEnabled()) {
@@ -228,6 +230,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            proguardFile "${rootProject.projectDir}/../node_modules/detox/android/detox/proguard-rules-app.pro" //detox config
         }
     }
 
@@ -249,6 +252,10 @@ android {
 }
 
 dependencies {
+    androidTestImplementation('com.wix:detox:+') //detox config
+
+    implementation 'androidx.appcompat:appcompat:1.1.0' //detox config
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
