--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "detox:ios:debug:build": "detox build --configuration ios.sim.debug",
+    "detox:ios:debug:test": "detox test --configuration ios.sim.debug",
+    "detox:ios:release:build": "detox build --configuration ios.sim.release",
+    "detox:ios:release:test": "detox test --configuration ios.sim.release",
+    "detox:android:debug:build": "detox build --configuration android.emu.debug",
+    "detox:android:debug:test": "detox test --configuration android.emu.debug",
+    "detox:android:release:build": "detox build --configuration android.emu.release",
+    "detox:android:release:test": "detox test --configuration android.emu.release",
+    "detox:clean:cache": "detox clean-framework-cache && detox build-framework-cache",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -36,8 +45,9 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "detox": "^20.1.0",
     "eslint": "^7.32.0",
-    "jest": "^26.6.3",
+    "jest": "^29",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0"
   },
