--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "detox:clean:cache": "detox clean-framework-cache && detox build-framework-cache",
     "detox:ios:debug:build": "detox build --configuration ios.sim.debug",
-    "detox:ios:debug:test": "detox test --configuration ios.sim.debug",
+    "detox:ios:debug:test": "yarn detox:clean:cache && detox test --configuration ios.sim.debug",
     "detox:ios:release:build": "detox build --configuration ios.sim.release",
     "detox:ios:release:test": "detox test --configuration ios.sim.release",
     "detox:android:debug:build": "detox build --configuration android.emu.debug",
-    "detox:android:debug:test": "detox test --configuration android.emu.debug",
+    "detox:android:debug:test": "yarn detox:clean:cache && detox test --configuration android.emu.debug",
     "detox:android:release:build": "detox build --configuration android.emu.release",
     "detox:android:release:test": "detox test --configuration android.emu.release",
-    "detox:clean:cache": "detox clean-framework-cache && detox build-framework-cache",
     "test": "jest",
     "lint": "eslint ."
   },
